# stockex_project

./: .gitignore  CLAUDE.md  MULTIWALLET_PLAN.md  SCALING.md  gameslogic.md  package-lock.json  refles.md  ss.md  wallet.md
backend/: .env.example  DEPLOY_BRANDING.md  README.md  SECURITY.md  ZERODHA_AUTOLOGIN_DEPLOY.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  leader_lock.py  logging_config.py  loop_supervisor.py  rate_limit.py  redis_client.py  resilience.py  security.py  ws_hub.py  ws_limiter.py
backend/app/models/: __init__.py  _base.py  _types.py  admin_fund.py  admin_settlement.py  alert.py  audit_log.py  bank_account.py  broker_settlement.py  brokerage_plan.py  expiry_override.py  holding.py  holiday.py  kyc.py  (+20 more)
backend/charting/: .gitignore  datafeed.js  index.html
backend/scripts/: apply_game_spec.py  audit_user.py  backfill_fixed_brokerage_rates.py  backfill_position_opened_side.py  backup_to_atlas.sh  clear_user_settlement.py  close_demo_positions.py  close_user_positions.py  create_test_user.py  diag_admin_scope.py  diag_stale_feed.py  diag_user_money.py  diagnose_user.py  export_broker_users.py  fix_bogus_proceeds_credits.py  fix_instrument_segments.py  generate_vapid_keys.py  reconcile_wallets.py  reseed_super_admin.py  reset_user_margins.py  restore_from_atlas.sh  settle_expired_positions.py  split_nse_fno_segments.py  verify_branding_indexes.py
backend/tests/: test_games_payout_math.py  test_risk_sharding.py  test_segment_settings_end_to_end.py
(+545 files in other folders)
