[project]
name = "setupfx-backend"
version = "1.0.0"
description = "SetupFX Broker — Indian B-Book stock trading platform backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "C4", "SIM", "PL"]
ignore = ["S101", "PLR0913", "PLR2004", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"app/seed/*" = ["S105", "S106"]
"tests/*" = ["S101", "S105", "S106"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
